--- a/File_Server/File_Server/templates/base.html
+++ b/File_Server/File_Server/templates/base.html
@@ -1,5 +1,115 @@
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    {% load static %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     
+    <title>RMLD File Server</title>
+
+    <style>
+      body {
+          font-family: 'Arial', sans-serif;
+          background-color: #f4f4f4;
+          margin: 0;
+          padding: 0;
+          text-align: center;
+      }
+
+      .containering {
+          display: flex;
+          justify-content: center;
+          height: 100vh;
+      }
+
+      .error-message {
+          color: #333;
+          font-size: 2em;
+      }
+
+      .image-container {
+          margin-top: 30px;
+      }
+  </style>
+
+<style>
+  table {
+      border-collapse: collapse;
+      width: 100%;
+  }
+
+  th, td {
+      padding: 10px;  /* Adjust the padding as needed */
+      text-align: left;
+  }
+
+  th {
+      background-color: #f2f2f2;  /* Optional: Add a background color to header cells */
+  }
+</style>
+
+<style>
+  body {
+      font-family: 'Arial', sans-serif;
+      margin: 20px;
+  }
+  h1 {
+      color: #333;
+  }
+  h2 {
+      color: #555;
+  }
+  .credits-list {
+      list-style: none;
+      padding: 0;
+  }
+  .credit-item {
+      margin-bottom: 10px;
+  }
+</style>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+
+<body>
+
+  <div class="container">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">      
+          <a class="navbar-brand" href="{% url 'home' %}">
+            RMLD File Server
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <div class='navbar-nav ms-auto px-2'>
+              {% if user.is_authenticated %}
+              <a class='nav-item nav-link'>User: {{user.username}}</a>
+              <a class='nav-item nav-link active' href="{% url 'files:file_list' %}">View</a>
+              <a class='nav-item nav-link active' href="{% url 'files:upload_file' %}">Upload</a>
+              <a class='nav-item nav-link' href="JavaScript:{document.getElementById('logout').submit()}">Logout</a>
+              <form id='logout' method='POST' action="{% url 'logout' %}">
+                {% csrf_token %}
+                <input type='hidden' />
+              </form>
+              {% else %}
+              <a class='nav-item nav-link' href="{% url 'login' %}">Log in</a>
+              {% endif %}
+            </div>
+          </div>
+      </div>
+    </nav>
+  
+  </div>
+
+  {% block content %}
 
 
+  {% endblock %}
 
-{% endblock %}
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+</body>
+</html>
