--- a/File_Server/files/templates/files/upload_file.html
+++ b/File_Server/files/templates/files/upload_file.html
@@ -3,11 +3,36 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Upload File</h2>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Upload</button>
-  </form>
-  <a href="{% url 'file_list' %}">Back to File List</a>
+
+
+
+  <div class='container'>
+    <br><br>
+  <div class='container'>
+
+  <h1> Upload your file to RMLD File Server</h1>
+  
+  <br>
+  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center" >
+    <div class="col">
+      <div class="card mb-4 rounded-3 shadow-sm">
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+        <div class="card-header py-3">
+          <h4>Select your File</h4>
+        </div>
+        <div class="card-body">
+          <ul class="list-unstyled mt-3 mb-4">
+            <p align='center'>{{ form.as_p }}</p>
+          <button type="submit" class="btn btn-success">Upload</button>
+          </ul>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  </div>
+  </div>
+
 {% endblock %}
