--- a/File_Server/accounts/templates/accounts/home.html
+++ b/File_Server/accounts/templates/accounts/home.html
@@ -9,10 +9,10 @@
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         {% if user.is_authenticated %}
         <a type="button" class="btn btn-primary btn-lg px-4 gap-3" href='{% url "files:upload_file" %}'>Upload my Files</a>
-        <a type="button" class="btn btn-outline-secondary btn-lg px-4" href='{% url 'files:file_list' %}'>View My Files</a>
+        <a type="button" class="btn btn-outline-secondary btn-lg px-4" href='{% url "files:file_list" %}'>View My Files</a>
         {% else %}
-        <a type="button" class="btn btn-primary btn-lg px-4 gap-3" href='{% url "login" %}'>Upload my Files</a>
-        <a type="button" class="btn btn-outline-secondary btn-lg px-4" href='{% url "login" %}'>View my Files</a>
+        <a type="button" class="btn btn-primary btn-lg px-4 gap-3" href="{% url 'login' %}">Upload my Files</a>
+        <a type="button" class="btn btn-outline-secondary btn-lg px-4" href="{% url 'login' %}">View my Files</a>
         {% endif %}
       </div>
     </div>
