--- a/File_Server/files/templates/files/file_list.html
+++ b/File_Server/files/templates/files/file_list.html
@@ -2,6 +2,7 @@
 
 {% extends 'base.html' %}
 {% block content %}
+{% load static%}
 
 <style>
   .small-search-bar {
@@ -66,11 +67,28 @@
               <li><b>Note: </b>{{ file.notes }}</li>
             </ul>
 
-            <a href="{% url 'files:download_file' file_id=file.id %}" class="btn btn-success">Download File</a>
-            <a href="{% url 'files:delete_file' file_id=file.id %}" class="btn btn-danger">Delete File</a>
+            <a href="{% url 'files:download_file' file_id=file.id %}" class="btn btn-success" id='download'>Download File</a>
+            <a class="btn btn-danger" id='delete' onclick="raise_alerts({{file.id}})">Delete File</a>
           </div>
         </div>
       </div>
+
+      <script>
+        function raise_alerts(file_id)
+        {
+            yes = confirm("Are you sure you want to delete this file?");
+
+            if (yes == true)
+            {
+                window.location.replace("{% url 'files:delete_file' file_id=file.id %}".replace('file.id', 'file_id)'));
+                alert("File deleted successfully");
+            }
+            else
+            {
+                alert("File not deleted");
+            }
+        }
+      </script>
       {% endfor %}
     </div>
   </div>
