--- a/File_Server/files/templates/files/file_list.html
+++ b/File_Server/files/templates/files/file_list.html
@@ -70,6 +70,7 @@
             <a href="{% url 'files:download_file' file_id=file.id %}" class="btn btn-success" id='download'>Download File</a>
             <a href="{% url 'files:view_file' file_id=file.id %}" class="btn btn-warning" id='view' target="_blank">View File</a>
             <a class="btn btn-danger" id='delete' onclick="raise_alerts({{file.id}})">Delete File</a>
+            <a href="{% url 'files:share_file' file_id=file.id %}" class="btn btn-primary" id='view' target="_blank">Share File Link</a>
           </div>
         </div>
       </div>
