Added the tag which displays the Space Used by the user

--- a/File_Server/files/templates/files/file_list.html
+++ b/File_Server/files/templates/files/file_list.html
@@ -31,6 +31,9 @@
     {% endif %}
 
     <h1>Your Files and Documents</h1>
+    <div class='container'>
+      <b>You have used: {{total_file_size_mb}}MB of your Space</b>
+    </div>
     <br>
     <div class='container'>
       <form id="file-search-form">
