Added the Logo!

--- a/File_Server/File_Server/templates/base.html
+++ b/File_Server/File_Server/templates/base.html
@@ -79,9 +79,11 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">      
+        <img class='d-inline-block align-top' src="{% static 'logo.png' %}" height='35' width='35'/>
           <a class="navbar-brand" href="{% url 'home' %}">
             RMLD File Server
           </a>
+          <br>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
