--- a/File_Server/File_Server/templates/base.html
+++ b/File_Server/File_Server/templates/base.html
@@ -69,7 +69,7 @@
 </style>
 
 
-
+<link rel="icon" type="image/png" href="{% static 'logo.png' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
@@ -79,7 +79,6 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">      
-        <img class='d-inline-block align-top' src="{% static 'logo.png' %}" height='35' width='35'/>
           <a class="navbar-brand" href="{% url 'home' %}">
             RMLD File Server
           </a>
