Finished the User Activity Logs for Monitoring

--- a/File_Server/activity/templates/activity/activity_log.html
+++ b/File_Server/activity/templates/activity/activity_log.html
@@ -10,7 +10,7 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>User</th>
+                <th>Username</th>
                 <th>Activity</th>
                 <th>Timestamp</th>
             </tr>
