Added the Logo in the Navbar

--- a/File_Server/File_Server/templates/base.html
+++ b/File_Server/File_Server/templates/base.html
@@ -80,6 +80,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">      
           <a class="navbar-brand" href="{% url 'home' %}">
+            <img class='d-inline-block align-top' src="{% static 'logo.png' %}" height='35' width='35'/>
             RMLD File Server
           </a>
           <br>
