--- a/File_Server/files/templates/files/upload_file.html
+++ b/File_Server/files/templates/files/upload_file.html
@@ -29,6 +29,12 @@
                   {{ form.notes }}
                 </div>
 
+                {% if error %}
+                  <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                  </div>
+                {% endif %}
+
                 <button type="submit" class="btn btn-success">Upload</button>
               </div>
             </form>
