Done with fixing the issue

--- a/File_Server/File_Server/templates/base.html
+++ b/File_Server/File_Server/templates/base.html
@@ -113,6 +113,12 @@
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% endif %}
+
+    {% if delete_success %}
+    <div class="container alert alert-success" id="alert-container" role="alert">
+      {{ delete_success }}
+    </div>
+    {% endif %}
   
   </div>
 
