Updated the password

--- a/File_Server/accounts/templates/accounts/login.html
+++ b/File_Server/accounts/templates/accounts/login.html
@@ -43,8 +43,8 @@
   <br>
   <div class='container'>
       <div class="alert alert-primary container" role="alert" align='center'>
-          <p>You have already Logged In. Please Continue to Vote!</p>
-          <a href="{% url 'polls:index' %}" class="btn btn-success">Vote Now!</a>
+          <p>You have already Logged In.</p>
+          <a href="{% url 'home' %}" class="btn btn-success">Go !</a>
       </div>
   </div>
   
